fix layout problems

--- a/packages/@coorpacademy-components/src/molecule/dashboard/start-battle/style.css
+++ b/packages/@coorpacademy-components/src/molecule/dashboard/start-battle/style.css
@@ -14,7 +14,7 @@
   max-width: 1080px;
   flex: 1 1 100%;
   background: #FFFFFF;
-  border: 1px solid #FEFEFE;
+  border: 1px solid #ECEFF1;
   box-shadow: 0 0 1px 1px rgba(0,0,0,0.10);
 }
 
